examples/datalog/14_aggregations/66_count_with_grouping.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_count_group
Knowledge graph 'test_count_group' created.
Switched to knowledge graph: test_count_group
> .kg use test_count_group
Switched to knowledge graph: test_count_group
> +orders[(1, "Alice", "NYC"), (2, "Bob", "LA"), (3, "Alice", "NYC"), (4, "Alice", "LA"), (5, "Bob", "NYC")].
Inserted 5 fact(s) into 'orders'.
> +orders_by_city(Cust, City, <COUNT:Id>) :- orders(Id, Cust, City).
Script error: Parse error: Invalid term: '<COUNT:Id>'
